# sendbox

./: pyproject.toml
src/image_rotation/: image_rotation.py
